Duplicate checking using using lmdb with low mem footprint