@@ -120,11 +120,31 @@
             <version>1.24.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.lmdbjava</groupId>
+            <artifactId>lmdbjava</artifactId>
+            <version>0.8.1</version>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>com.github.jnr</groupId>-->
+<!--                    <artifactId>jffi</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+        </dependency>
+
 <!--        <dependency>-->
-<!--            <groupId>org.lmdbjava</groupId>-->
-<!--            <artifactId>lmdbjava</artifactId>-->
-<!--            <version>0.7.0</version>-->
+<!--            <groupId>com.github.jnr</groupId>-->
+<!--            <artifactId>jffi</artifactId>-->
+<!--            <version>1.2.18</version>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>com.github.jnr</groupId>
+            <artifactId>jffi</artifactId>
+            <version>1.2.18</version>
+            <classifier>native</classifier>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -389,13 +409,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>
                         --illegal-access=deny
+                        --add-opens=java.base/java.nio=lmdbjava
+                        --add-exports=java.base/sun.nio.ch=lmdbjava
+                        --add-opens=no.ssb.dc.server/no.ssb.dc.server.service=ALL-UNNAMED
                         --add-reads no.ssb.dc.content.rawdata=no.ssb.dc.core
-                        --add-exports
-                        no.ssb.rawdata.postgres/no.ssb.rawdata.provider.postgres=no.ssb.service.provider.api,no.ssb.dc.server
+                        --add-exports no.ssb.rawdata.postgres/no.ssb.rawdata.provider.postgres=no.ssb.service.provider.api,no.ssb.dc.server
                         -Xmx1500m
                     </argLine>
                 </configuration>
